<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/BTinformationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bluetooth Information" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:text="@string/btnok"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <Switch
                android:id="@+id/btnchange"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/btnok"
                android:layout_alignBottom="@+id/btnok"
                android:layout_alignParentEnd="true"
                android:textOff="@string/CH"
                android:textOn="@string/EN"
                android:showText="true"/>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/select"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/flage"
            android:layout_width="100dp"
            android:layout_height="23dp"
            android:layout_marginEnd="13dp"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


        <TextView
            android:id="@+id/TextView_R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView_R" />

        <TextView
            android:id="@+id/TextView_L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView_L" />

        <LinearLayout
            android:id="@+id/devicelayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/LHTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ListView
                    android:id="@+id/LHBTListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/RHTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ListView
                    android:id="@+id/RHBTListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="10"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/ltv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/ltv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/ltv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/ltv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/ltv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="10"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/rtv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/rtv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/rtv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/rtv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/rtv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/LV_GV"
            android:layout_width="match_parent"
            android:layout_height="55dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="102dp"
        android:orientation="vertical" >

    </LinearLayout>

    <!--<Button
        android:id="@+id/BT_GV"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/voice" />-->
</LinearLayout>